WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45781
Sort with non-numeric custom sort function fails on array with length but no values
https://bugs.webkit.org/show_bug.cgi?id=45781
Summary
Sort with non-numeric custom sort function fails on array with length but no ...
Darin Adler
Reported
2010-09-14 13:54:29 PDT
Sort with non-numeric custom sort function fails on array with length but no values
Attachments
Patch
(4.62 KB, patch)
2010-09-14 13:56 PDT
,
Darin Adler
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-09-14 13:55:09 PDT
Someone ran into this at the FedEx website.
Darin Adler
Comment 2
2010-09-14 13:56:50 PDT
Created
attachment 67601
[details]
Patch
Geoffrey Garen
Comment 3
2010-09-14 14:03:26 PDT
Comment on
attachment 67601
[details]
Patch r=me
Darin Adler
Comment 4
2010-09-14 14:06:22 PDT
Committed
r67494
: <
http://trac.webkit.org/changeset/67494
>
WebKit Review Bot
Comment 5
2010-09-14 14:44:11 PDT
http://trac.webkit.org/changeset/67494
might have broken Qt Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/67496
http://trac.webkit.org/changeset/67494
http://trac.webkit.org/changeset/67495
Eric Seidel (no email)
Comment 6
2010-09-14 15:47:06 PDT
More builders need updated results:
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r67496%20(20160)/fast/css/visited-link-hang-pretty-diff.html
Eric Seidel (no email)
Comment 7
2010-09-14 15:47:22 PDT
webkit-patch rebaseline can pull down the results for failing builders for you.
Eric Seidel (no email)
Comment 8
2010-09-14 15:47:51 PDT
(webkit-patch rebaseline is super-alpha though, so it may not always do what you want!)
Darin Adler
Comment 9
2010-09-14 22:11:32 PDT
I accidentally landed the wrong expected results, Geoff fixed them later. It’s a mystery to me why every builder didn’t fail!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug