2010-09-14  Darin Adler  <darin@apple.com>

Reviewed by Geoffrey Garen.

        Sort with non-numeric custom sort function fails on array with length but no values
        https://bugs.webkit.org/show_bug.cgi?id=45781

        * runtime/JSArray.cpp:
        (JSC::JSArray::sort): Replaced early exit for an array of length zero to instead
        exit for any array without values, even if it has a non-0 length.
2010-09-14  Darin Adler  <darin@apple.com>

        Reviewed by Geoffrey Garen.

        Sort with non-numeric custom sort function fails on array with length but no values
        https://bugs.webkit.org/show_bug.cgi?id=45781

        * fast/js/script-tests/sort-large-array.js: Added test cases.
        * fast/js/sort-large-array-expected.txt: Updated.


Canonical link: https://commits.webkit.org/58222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67494 268f45cc-cd09-0410-ab3c-d52691b4dbfc